keycloak docker compose adjusted